@@ -63,6 +63,9 @@
 
     <!-- earth -->
     <resource type="image" id="earth_dialog">sprites/portraits/earth-1.png</resource>
+    <resource type="image" id="earth_ship_dialog">sprites/portraits/earth-2.png</resource>
+    <resource type="image" id="earth_transport">sprites/ships/human_transport.png</resource>
+    <resource type="image" id="earth_station">sprites/ships/human_station.png</resource>
 
 
     <!-- research icons -->
